Add first images by Carlos

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1,12 +1,16 @@
 - title: "Home"
   href: "/"
+- title: "Collages"
+  href: "/gallery/collages/"
+- title: "Paintings"
+  href: "/gallery/paintings/"
+- title: "Mixed Media"
+  href: "/gallery/mixed-media/"
+- title: "Sculptures"
+  href: "/gallery/sculptures/"
 - title: "About"
   href: "/about/"
-- title: "Galleries"
-  href: "/gallery/"
 - title: "Contact"
   href: "/contact/"
 - title: "News"
   href: "/news/"
-- title: "Typography"
-  href: "/typography/"
