--- a/_config.yml
+++ b/_config.yml
@@ -9,17 +9,16 @@ plugins:
    - jekyll-tagging-related_posts
 
 # Site settings
-title: An artist
-subtitle: Great artist
-name: An artist
-description: Demo Eye Gallery site
+title: "BigCyArts"
+subtitle:
+name: "Carlos Caban"
+description: "Carlos Caban artist website"
 # Base URL of site (i.e. /blog). It should always start with a slash,
 # and never end with a slash. Set it to a blank value if hosting at the
 # root of your server.
 baseurl: ""
 # the base hostname & protocol for your site
-url: "https://black-hare.cloudvent.net"
-# apt-loris.cloudvent.net for Jekyll3
+url: "https://www.bigcyarts.com"
 
 logo: "/assets/logo.png"
 show_logo: false
@@ -39,8 +38,8 @@ highlightjs_theme: "monokai-sublime"
 
 # Image CDN
 imagecdn:
-  staging: "https://ed-eyegallery-dev.imgix.net" # apt-loris.cloudvent.net
-  production: "https://ed-eyegallery.imgix.net"
+  staging: "https://ed-bigcyarts-dev.imgix.net" # apt-loris.cloudvent.net
+  production: "https://ed-bigcyarts.imgix.net"
 
 # Collections Example
 collections:
@@ -122,10 +121,10 @@ _options:
 disqus_shortname: alun-ward
 
 # Google analytics
-# ga_tracking_id: ""
+ga_tracking_id: "UA-127298653-1"
 
 # Google Recaptcha used for contact form - used by seo-tag
-recaptcha_site_key: "6LcNYBQUAAAAAALGOjCFo1CKxb65aFTFelMJo1YF"
+recaptcha_site_key: "6LeAknQUAAAAADkLP48BGT_fchWQKYfnbTiK1SD5"
 
 # Google Site verification if required
 # google_site_verification: ""
