Added logo and all correct pages and news on front page

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -12,5 +12,5 @@
   href: "/about/"
 - title: "Contact"
   href: "/contact/"
-- title: "News"
-  href: "/news/"
+- title: "Writings"
+  href: "/writings/"
