--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ baseurl: ""
 # the base hostname & protocol for your site
 url: "https://www.bigcyarts.com"
 
-logo: "/assets/logo.png"
-show_logo: false
+logo: "/assets/images/rose-logo.jpg"
+show_logo: true
 email: a.ward@eyedivision.com
 
 default_post_image: "/assets/images/road_closed.jpg"
@@ -148,36 +148,36 @@ social:
 
   - name: Facebook
     icon: icon-facebook_sign
-    username: 'eyedivision'
-    url: https://www.facebook.com/eyedivision
+    username: ''
+    url:
     desc: Like us on Facebook
     share: true
 
   - name: Instagram
     icon: icon-instagram
-    username: '@eyedivision'
-    url: https://instagram.com/eyedivision
-    desc: Follow us on Instagram
+    username: '@bigcyarts'
+    url: https://instagram.com/bigcyarts
+    desc: Follow me on Instagram
     share: false
 
   - name: Twitter
     icon: icon-twitter_sign
-    username: '@EyeDivision'
-    url: https://twitter.com/EyeDivision
-    desc: Follow us on Twitter
+    username: '@cocaban5'
+    url: https://twitter.com/cocaban5
+    desc: Follow me on Twitter
     share: true
 
   - name: Pinterest
     icon: icon-pinterest
-    username: 'eyediv'
-    url: https://www.pinterest.co.uk/eyediv/
+    username:
+    url:
     desc: Follow us on Pinterest
     share: true
 
   - name: linkedin
     icon: icon-linkedin_sign
-    username: 'eye-division-ltd'
-    url: https://www.linkedin.com/company/eye-division-ltd/
+    username:
+    url:
     desc: Connect with us on LinkedIn
     share: true
 
